tests/negative/test_data_member_name_taken.orb
data Foo {
    x:i32
    x:bool
};

fnc main() () {};